--- a/style.css
+++ b/style.css
@@ -1,25 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
-*{
-box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  flex-direction: column;
+  background: #dde1e7;
 }
 
-.keyboard_wrapper {
-    border: 1px solid red;
-    width: 740px;
-    padding: 25px;
-    border-radius: 15px;
-    box-shadow: 4px 4px ;
+.container {
+  width: 60%;
 }
 
-.keyboard_wrapper .display{
-    border: 1px solid red;
+.container .wrapper {
+  min-width: 750px;
+  max-width: 1000px;
+  border-radius: 10px;
+  padding: 25px;
+  background: #dde1e7;
+  box-shadow: -3px -3px 7px #ffffff73, 2px 2px 5px rgba(94, 104, 121, 0.288);
 }
 
-.keyboard_wrapper .key{
-    border: 1px solid green;
+.wrapper .keys {
+  display: flex;
+  justify-content: center;
+}
+
+.wrapper .keys input {
+  height: 50px;
+  min-width: 50px;
+  padding: 10px;
+  outline: none;
+  margin: 10px;
+  border-radius: 5px;
+  border: none;
+  font-size: 20px;
+  color: grey;
+  text-transform: uppercase;
+  background: #dde1e7;
+  box-shadow: -3px -3px 7px #ffffff73, 2px 2px 5px rgba(94, 104, 121, 0.288);
+}
+
+.wrapper .keys input:focus {
+  color: grey;
+  font-size: 19px;
+  box-shadow: inset -3px -3px 7px #ffffff73,
+    inset 2px 2px 5px rgba(94, 104, 121, 0.288);
+}
+
+.wrapper .keys input[value="space"] {
+  width: 60%;
 }
