--- a/style.css
+++ b/style.css
@@ -59,3 +59,24 @@ body {
 .wrapper .keys input[value="space"] {
   width: 60%;
 }
+.wrapper .display {
+  width: 100%;
+  height: 150px;
+  margin-bottom: 20px;
+  user-select: none;
+}
+
+.wrapper .display textarea {
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  resize: none;
+  font-size: 24px;
+  padding: 10px 15px;
+  border-radius: 10px;
+  pointer-events: none;
+  background: #dde1e7;
+  box-shadow: inset -3px -3px 7px #ffffff73,
+  inset 2px 2px 5px rgba(94, 104, 121, 0.288);
+}
